k8s/streamingapp/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: streamingapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: sacdew77/streaming-admin:1.0.0
          ports:
            - containerPort: 3003
              name: http
          readinessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
  namespace: streamingapp
spec:
  selector:
    app: admin
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  type: ClusterIP
