k8s/streamingapp/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: streamingapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: sacdew77/streaming-chat:1.0.0
          ports:
            - containerPort: 3004
              name: http
          readinessProbe:
            tcpSocket:
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3004
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: chat-svc
  namespace: streamingapp
spec:
  selector:
    app: chat
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
  type: ClusterIP
