k8s/streamingapp/streaming-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming
  namespace: streamingapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      containers:
        - name: streaming
          image: sacdew77/streaming-stream:1.0.0
          ports:
            - containerPort: 3002
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: streaming-svc
  namespace: streamingapp
spec:
  selector:
    app: streaming
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  type: ClusterIP
